limit width of first chart on collections stats page so it doesn't overlap the map help link - issue #44

--- a/web-app/css/public.css
+++ b/web-app/css/public.css
@@ -209,6 +209,12 @@ div.vertical-charts h3:first-child {
 #charts > div.pie, #charts > div.column, #charts > div.bar {
     float:left;
 }
+
+#charts > div:first-child {
+    width: 530px;
+    *width: auto; /* IE 7 */
+}
+
 /************************************************************\
 * Records maps
 \************************************************************/
